examples/test/testpolicy17720.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17720
  namespace: namespace493
spec:
  podSelector:
    matchLabels:
      key46: value46
      key10: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value35
          key13: value11
          key15: value45
      podSelector:
        matchLabels:
          key49: value29
          key24: value34
